# todo-tg-bot

./: Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_30_1935-785b6ee33f86_init_tables.py  2024_05_01_1828-2a02e9366b78_add_created_at_tasks.py
app/: database.py  di_container.py  main.py  settings.py
app/handlers/: common.py  keyboards.py  tasks.py
app/interfaces/: repo.py  unit_of_work.py
app/models/: __init__.py  tasks.py
app/repo/: base.py  tasks.py  unit_of_work.py
app/schemas/: tasks.py
app/services/: tasks.py
docker/: app.sh
