[tool.poetry]
name = "anverali-tg-bot"
version = "0.1.0"
description = ""
authors = ["nuris <tasbolatov.nd03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.5.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
punq = "^0.7.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
